# template-c-cpp-project

./: .gitignore  CMakeLists.txt  LICENSE  boot.cpp  build.gradle  project-init.sh  sample_test.cpp
gradle/wrapper/: gradle-wrapper.properties
src/: example.cpp  example.h  example_test.cpp
src/echoer/cpp/: echoer.cpp
src/echoer/headers/: echoer.h
src/echoerTest/cpp/: all_tests.cpp  echoerTests.cpp
src/main/cpp/: hello.cpp
